--- a/platforms/android/app/src/main/assets/www/css/index.css
+++ b/platforms/android/app/src/main/assets/www/css/index.css
@@ -49,7 +49,9 @@ body {
 .app {
     /*background:url(../img/logo.png) no-repeat center top; */
     /* 170px x 200px */ 
-    
+        background-color: #DFDBE5;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        font-family: 'Mina', sans-serif;
     position:absolute;             /* position in the center of the screen */
     left:50%;
     top:50%;
@@ -115,3 +117,68 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+
+ .btn-primary {
+        font-family: 'Mina', sans-serif;
+        background: #f0ad4e;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        font-style: italic;
+        text-transform: capitalize;
+        color: #2C1D57;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 35px;
+        margin: 0 0 2em;
+        max-width: 120px;
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+        width: 60%;
+        font-weight: 100;
+        box-shadow: 3px rgba (255, 255, 255.7);
+        opacity: 100;
+        transition-property: opacity, background, box-shadow, border-radius;
+        transition-duration: .5s;
+        transition-delay: .2s, .3s, 0s;
+    }
+
+
+.btn-primary:link {
+        color: #ffa949;
+        text-decoration: none;
+        background: violet;
+    }
+    
+    .btn-primary:active {
+        color: blue;
+        background: #a33830;
+    }
+    
+    .btn-primary:hover {
+        background-color: purple;
+        color: white;
+        /*
+        transition-duration: 0.4s, 0.3s, 0.2s;
+        transition-property: background, border-radius, color;
+        */
+        box-shadow: 3px rgba (255, 255, 255.7);
+        font-weight: 900;
+        letter-spacing: 1px;
+        border-radius: 1em;
+        -webkit-border-radius: 1em;
+        -moz-border-radius: 1em;
+        -ms-border-radius: 1em;
+        -o-border-radius: 1em;
+    }
+    
+    .btn-primary:active {
+        background-color: chartreuse;
+        color: #665544;
+    }
